Antes del apagon

--- a/pagina_web/formulario.html
+++ b/pagina_web/formulario.html
@@ -1,12 +1,12 @@
 <div class="forms">
     <form action="">
-        <label class="form-st" for="name">Nombre:</label>
+        <label class="form-st" for="name">Nombre</label>
         <input class="form-st" type="text" name="nombre" id="">
-        <label class="form-st" for="name">Apellidos:</label>
+        <label class="form-st" for="name">Apellidos</label>
         <input class="form-st" type="text" name="apellidos" id="">
-        <label class="form-st" for="name">Edad:</label>
+        <label class="form-st" for="name">Edad</label>
         <input class="form-st" type="text" name="edad" id="">
-        <label class="form-st" for="">Sexo:</label>
+        <label class="form-st" for="">Sexo</label>
         <select class="form-st" name="" id="">
             <option value="" selected>-</option>
             <option value="F">Femenino</option>
