--- a/pagina_web/nav.html
+++ b/pagina_web/nav.html
@@ -1,8 +1,16 @@
 <nav>
+    
     <ul>
-        <li class="btn"><a href="index.html">Inicio</a></li>
+    <!--
+        <li class="btn"><a href="index.php">Inicio</a></li>
         <li class="btn"> | <a href="formulario.html">Registro</a></li>
         <li class="btn"> | <a href="">Contactos</a></li>
         <li class="btn"> | <a href="">Tres</a></li>
+    -->
+        <li><button type="button">Inicio</button></li>
+        <li><button type="button">Registro</button></li>
+        <li><button type="button">Imagenes</button></li>
+        <li><button type="button">Sonido</button></li>
+        <li><button type="button">Videos</button></li>
     </ul>
 </nav>
